--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-Cython
+Cython==0.29.21
 librosa==0.8.0
-matplotlib
+matplotlib==3.3.1
 numpy==1.19.5
-scipy
+numba==0.56.4
+scipy==1.10.1
 tensorboard
-unidecode
-jamo
-pypinyin
-jieba
+Unidecode==1.1.1
+jamo==0.4.1
+pypinyin==0.44.0
+jieba==0.42.1
 protobuf
-cn2an
-inflect
-eng_to_ipa
-ko_pron
+cn2an==0.5.17
+inflect==6.0.2
+eng-to-ipa==0.0.2
+ko_pron==1.3
 indic_transliteration
 num_thai
 opencc
