--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-Cython==0.29.21
+Cython==3.0.2
 librosa==0.8.0
-matplotlib==3.3.1
+matplotlib
 numpy==1.19.5
-numba==0.56.4
-scipy==1.10.1
+numba
+scipy
 tensorboard
-Unidecode==1.1.1
-jamo==0.4.1
-pypinyin==0.44.0
-jieba==0.42.1
+Unidecode
+jamo
+pypinyin
+pyopenjtalk
+jieba
 protobuf
-cn2an==0.5.17
-inflect==6.0.2
-eng-to-ipa==0.0.2
-ko_pron==1.3
+cn2an
+inflect
+eng-to-ipa
+ko_pron
 indic_transliteration
 num_thai
 opencc
