--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ numba==0.56.4
 scipy==1.10.1
 tensorboard
 Unidecode==1.1.1
-jamo
-pypinyin
+jamo==0.4.1
+pypinyin==0.44.0
 pyopenjtalk==0.2.0
-jieba
+jieba==0.42.1
 protobuf
-cn2an
-inflect
-eng-to-ipa
-ko_pron
+cn2an==0.5.17
+inflect==6.0.2
+eng-to-ipa==0.0.2
+ko_pron==1.3
 indic_transliteration
 num_thai
 opencc
