--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ pypinyin==0.44.0
 jieba==0.42.1
 protobuf
 cn2an==0.5.17
-inflect==6.0.2
 eng-to-ipa==0.0.2
+g2pk2==0.0.1
+pydantic==1.10.2
+inflect==6.0.2
 ko_pron==1.3
 indic_transliteration
 num_thai
-opencc
 ipython
 gradio
 gdown
+
