--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,8 @@ gradio
 gdown
 faster-whisper==0.3.0
 tqdm
+pyopenjtalk==0.2.0
+torch==1.13.1
+torchvision==0.14.1
+torchaudio==0.13.1
+--index-url https://download.pytorch.org/whl/cu117
